tests/bws-m4/kind-isolated.yaml
kind: Cluster
apiVersion: kind.x-k8s.io/v1alpha4
nodes:
  - role: control-plane
  - role: worker
  - role: worker
networking:
  ipFamily: dual
  apiServerAddress: 127.0.0.1
